[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/project_map/pm_file_node.gd" type="Script" id=1]
[ext_resource path="res://addons/project_map/pm_resource.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/project_map/node_selected.stylebox" type="StyleBox" id=3]
[ext_resource path="res://addons/project_map/node.stylebox" type="StyleBox" id=4]
[ext_resource path="res://btn_show.tres" type="Animation" id=5]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="FileNode" type="GraphNode"]
margin_right = 62.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 37, 85 )
mouse_filter = 1
custom_constants/port_offset = 0
custom_styles/frame = ExtResource( 4 )
custom_styles/selectedframe = ExtResource( 3 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 28.0

[node name="Resource" parent="VB" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 52.0

[node name="Script" parent="VB" instance=ExtResource( 2 )]
visible = false
margin_left = 0.0
margin_top = 24.0
margin_right = 52.0
margin_bottom = 44.0

[node name="HSeparatorMapTexture" type="HSeparator" parent="VB"]
visible = false
margin_top = 36.0
margin_right = 52.0
margin_bottom = 40.0
custom_constants/separation = -1

[node name="TextureRect" type="TextureRect" parent="VB"]
visible = false
margin_top = 28.0
margin_right = 60.0
margin_bottom = 88.0
rect_min_size = Vector2( 60, 60 )
expand = true
stretch_mode = 6

[node name="MapHeader" type="HBoxContainer" parent="VB"]
visible = false
margin_top = 24.0
margin_right = 64.0
margin_bottom = 84.0

[node name="MapThumbnail" type="TextureRect" parent="VB/MapHeader"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
expand = true

[node name="MapTitle" type="TextEdit" parent="VB/MapHeader"]
margin_left = 64.0
margin_right = 64.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapMemoLabelRow" type="HBoxContainer" parent="VB"]
visible = false
margin_top = 88.0
margin_right = 64.0
margin_bottom = 108.0

[node name="VisibleToggle" type="Button" parent="VB/MapMemoLabelRow"]
margin_right = 12.0
margin_bottom = 20.0

[node name="MapMemoLabel" type="Label" parent="VB/MapMemoLabelRow"]
margin_left = 16.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 17.0
text = "Memo:"

[node name="MapMemo" type="TextEdit" parent="VB"]
visible = false
margin_top = 112.0
margin_right = 64.0
margin_bottom = 136.0
rect_min_size = Vector2( 52, 24 )

[node name="MapFooter" type="CenterContainer" parent="VB"]
visible = false
margin_top = 112.0
margin_right = 64.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/btn_show = ExtResource( 5 )

[connection signal="resize_request" from="." to="." method="_on_FileNode_resize_request"]
[connection signal="pressed" from="VB/MapMemoLabelRow/VisibleToggle" to="." method="_on_VisibleToggle_pressed"]
